# portfoliodb

./: .dockerignore  .env  .gitignore  .windsurfrules  Dockerfile  RUST_REWRITE_PLAN.md  Taskfile.yaml  architecture.md
backend/: README.md  manage.py  pyproject.toml
backend-rust/: .env.example  API_ENDPOINTS.md  ARCHITECTURE.md  Cargo.toml  PROGRESS.md  README.md  REPOSITORY_PATTERN.md  TESTING.md
backend-rust/src/: config.rs  error.rs  lib.rs  main.rs  routes.rs
backend-rust/src/db/: migrations.rs
backend-rust/src/handlers/: action_types.rs  developments.rs  health.rs  investment_prices.rs  investments.rs  mod.rs  movements.rs  prices.rs  quotes.rs  settings.rs
backend-rust/src/models/: action_type.rs  investment.rs  investment_price.rs  mod.rs  movement.rs  settings.rs
backend-rust/src/repository/: action_type.rs  investment.rs  investment_price.rs  mod.rs  movement.rs  settings.rs  traits.rs
backend-rust/src/repository/sqlite/: action_type.rs  investment.rs  investment_price.rs  mod.rs  movement.rs  settings.rs
backend-rust/src/services/: currency_converter.rs  mod.rs  portfolio_calculator.rs  quote_fetcher.rs
backend-rust/src/services/providers/: justetf.rs  provider_trait.rs  yahoo_finance.rs
backend-rust/src/services/quotes/: justetf.rs  mod.rs  yahoo_finance.rs
backend-rust/tests/: currency_converter_tests.rs  investment_validation_tests.rs  justetf_provider_tests.rs  portfolio_calculator_tests.rs  quote_fetcher_tests.rs  repository_action_type_tests.rs  repository_investment_price_tests.rs  repository_investment_tests.rs  repository_movement_tests.rs  repository_settings_tests.rs  test_helpers.rs  yahoo_finance_provider_tests.rs
backend/core/: __init__.py  admin.py  models.py  serializers.py  table_calculations.py  views.py
backend/core/fixtures/: sample_data.json
backend/core/migrations/: 0001_initial.py  0002_load_actiontypes.py  0002_rename_short_name_investment_shortname.py  0003_rename_development_precalculateddevelopment_and_more.py  0003_settings_investment_quote_provider_and_more.py  __init__.py
backend/core/services/: README.md  currency_converter.py  justetf_provider.py  openbb_provider.py  quote_fetcher.py  quote_provider.py
backend/core/tests/: test_quote_fetcher.py  test_table_calculations.py
backend/portfoliodb/: asgi.py  settings.py  urls.py  wsgi.py
docs/: architecture.md  developer-instructions.md  docker.md  quote-fetching-planning.md
frontend/: index.html  package-lock.json  package.json
frontend/portfolio/: package-lock.json
frontend/src/: App.css  App.tsx  config.ts  theme.ts
frontend/src/components/: Datenimport.tsx  DatenimportWrapper.tsx  InvestmentDetail.tsx  Investments.tsx  InvestmentsWrapper.tsx  Movements.tsx  MovementsWrapper.tsx  PerformanceChart.tsx  PortfolioComposition.tsx  PortfolioDashboard.tsx  PortfolioTable.tsx  PriceHistoryDialog.tsx  Quotes.tsx  QuotesWrapper.tsx  ThemeToggle.tsx
frontend/src/hooks/: usePortfolioData.ts
frontend/src/parsing/: flatexParser.test.ts  flatexParser.ts  genericCsvParser.ts  parser.ts  types.ts
frontend/src/services/: api.ts
frontend/src/types/: api.ts  portfolio.ts  ui.test.ts  ui.ts
frontend/src/utils/: dateRange.test.ts  dateRange.ts  finmath.test.ts  finmath.ts  formatting.test.ts  formatting.ts  portfolioTransformations.test.ts  portfolioTransformations.ts  uniroot.ts
scripts/: README.md  api_test.py  ingest_data.py  json_to_csv.py
testdata/minimal/: actiontypes.csv  expectations.json  investmentprices.csv  investments.csv  movements.csv
