[package]
name = "portfoliodb-rust"
version = "0.1.0"
edition = "2021"

[dependencies]
# Web framework
axum = "0.7"
tokio = { version = "1.43", features = ["full"] }
tower = "0.5"
tower-http = { version = "0.6", features = ["cors", "trace", "fs"] }

# Database
sqlx = { version = "0.8", features = [
    "runtime-tokio-rustls",
    "sqlite",
    "migrate",
    "chrono",
    "rust_decimal",
] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
chrono = { version = "0.4", features = ["serde"] }

# Decimal precision for financial calculations
rust_decimal = { version = "1.36", features = ["serde"] }

# HTTP client for external APIs
reqwest = { version = "0.12", features = ["json"] }

# HTML parsing for web scraping
scraper = "0.20"

# Error handling
anyhow = "1.0"
thiserror = "1.0"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Environment variables
dotenvy = "0.15"

# Async utilities
futures = "0.3"
async-trait = "0.1"
regex = "1.10"

[dev-dependencies]
tokio-test = "0.4"
mockall = "0.12"
rstest = "0.18"
http-body-util = "0.1"
